--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "browser-sync": "^1.3.7",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "1.0.0",
+    "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.1.0",
     "gulp-sass-glob": "^1.0.6",
     "gulp-sass-glob-import": "^0.1.0",
+    "gulp-scss-lint": "^0.4.0",
     "gulp-uglify": "^1.5.3",
     "gulp-uncss": "^1.0.5"
   },
