--- a/.htaccess
+++ b/.htaccess
@@ -50,3 +50,11 @@ Redirect 301 /web-development/heeft-ooit-ergens-geblogd/ http://blog.michele.nl/
 Redirect 301 /page3/ http://blog.michele.nl/page3/
 Redirect 301 /page2/ http://blog.michele.nl/page2/
 Redirect 301 /page4/ http://blog.michele.nl/page4/
+
+
+Redirect 301 /portfolio/all-i-want-for-christmas/ /werk/all-i-want-for-christmas/
+Redirect 301 /portfolio/poopy-cat/ /werk/poopy-cat/
+Redirect 301 /portfolio/artipoppe/ /werk/artipoppe/
+Redirect 301 /portfolio/qli-travel/ /werk/qli-travel/
+Redirect 301 /portfolio/all-i-want-for-christmas/ /werk/all-i-want-for-christmas/
+Redirect 301 /portfolio/rood-witte-schare/ /werk/rood-witte-schare/
