--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^1.3.7",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "1.0.0",
+    "gulp-concat": "^2.6.0",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.1.0",
     "gulp-sass-glob": "^1.0.6",
