--- a/.htaccess
+++ b/.htaccess
@@ -33,6 +33,16 @@ FileETag INode MTime Size
 
 AddDefaultCharset utf-8
 
+RewriteEngine On
+# ensure www.
+RewriteCond %{HTTP_HOST} !^www\. [NC]
+RewriteRule ^ https://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+# ensure https
+RewriteCond %{HTTP:X-Forwarded-Proto} !https 
+RewriteCond %{HTTPS} off
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 Redirect 301 /about /hello
 Redirect 301 /recepten/recepten-eiwit-smoothies/ http://blog.michele.nl/recepten/recepten-eiwit-smoothies/
 Redirect 301 /nails/stone-marble-nails/ http://blog.michele.nl/nails/stone-marble-nails/
