Add spring update 2018

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Michèle
 email: michele.vd.aardweg@gmail.com
 description: Michèle van den Aardweg studeerde Interactieve Media (CMD) aan de Hogeschool van Amsterdam en werkt inmiddels zo'n 9 jaar bij Occhio. Sinds eind 2009 is Michèle werkzaam als senior front-end developer.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.michele.nl" # the base hostname & protocol for your site
+url: "https://www.michele.nl" # the base hostname & protocol for your site
 twitter_username: michelenl
 github_username:  michelevdaardweg
 
