--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Michèle
 email: michele.vd.aardweg@gmail.com
-description: Michèle van den Aardweg studeerde Interactieve Media (CMD) aan de Hogeschool van Amsterdam en werkt inmiddels zo'n 9 jaar bij Occhio. Sinds eind 2009 is Michèle werkzaam als senior front-end developer.
+description: Michèle van den Aardweg studeerde Interactieve Media (CMD) aan de Hogeschool van Amsterdam en werkt bij Grrr als senior front-end developer.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.michele.nl" # the base hostname & protocol for your site
 twitter_username: michelenl
